# csv_creator

./: .gitignore  Cargo.toml  readme.md
data/: provinces.csv  state_province.csv  stations.csv  time.csv
resources/: isd-history.txt
src/: main.rs  print_time.rs
src/lib/: forecast.rs  mod.rs  time.rs
src/lib/models/: adventure_work_forecast.rs  mod.rs  province.rs  state.rs  station.rs
src/models/: forecast.rs  geopos.rs
