[package]
name = "csv_creator"
version = "0.1.0"
authors = ["Guillaume Latour <g0latour@gmail.com>"]
edition = "2018"
default-run = "forecast"

[lib]
name = "bihelper"
path = "src/lib/mod.rs"

[dependencies]
chrono = {version = "0.4.11", features = ["serde"]}
csv = "1.1.3"
serde = "1.0.104"
serde_derive = "1.0.104"
reqwest = {version="0.10.4", features = ["blocking"]} # because I am not confortable with async yet
regex = "1.3.5"
geocoding = "0.1.2"